# ChangeLog for dev-db/mysql
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.378 2006/12/04 21:28:18 plasmaroo Exp $

  04 Dec 2006; Tim Yamin <plasmaroo@gentoo.org> mysql-5.0.26-r1.ebuild:
  Stable on IA64; bug #144999.

  24 Nov 2006; Markus Rothe <corsair@gentoo.org> mysql-5.0.26-r1.ebuild:
  Stable on ppc64; bug #144999

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
  -mysql-5.1.13_alpha20061018.ebuild:
  5.1.13 is bitkeeper sources, I do assume these are to be considered community

  17 Nov 2006; <blubb@gentoo.org> mysql-5.0.26-r1.ebuild:
  stable on amd64

  08 Nov 2006; Jeroen Roovers <jer@gentoo.org> mysql-5.0.26-r1.ebuild:
  Stable for HPPA (bug #144999).

  07 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mysql-5.0.26-r1.ebuild:
  Stable on sparc wrt #144999

  06 Nov 2006; nixnut <nixnut@gentoo.org> mysql-5.0.26-r1.ebuild:
  Stable on ppc wrt bug 144999

  05 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  mysql-5.0.26-r1.ebuild:
  stabled x86, bug #144999

  01 Nov 2006; Francesco Riosa <vivo@gentoo.org> mysql-4.0.25-r2.ebuild,
  mysql-4.0.27.ebuild, mysql-4.1.21.ebuild, mysql-5.0.26-r1.ebuild,
  mysql-5.1.13_alpha20061018.ebuild:
  - Added warn to ARCHs to remember them to cvs update the eclasses too
  - converted 4.0.25 to use eclasses.
  - added "~sparc-fbsd" keywords to two dependancies

  27 Oct 2006; Luca Longinotti <chtekk@gentoo.org>
  files/digest-mysql-5.1.13_alpha20061018, Manifest:
  Fix digest... Eclasses, please update YOUR ECLASSES!

  27 Oct 2006; Roy Marples <uberlord@gentoo.org> mysql-5.0.26-r1.ebuild:
  Added ~sparc-fbsd keyword.

  25 Oct 2006; Francesco Riosa <vivo@gentoo.org> mysql-5.0.26-r1.ebuild:
  Fix "trigger" test

*mysql-5.0.26-r1 (21 Oct 2006)

  21 Oct 2006; Luca Longinotti <chtekk@gentoo.org> -mysql-5.0.26.ebuild,
  +mysql-5.0.26-r1.ebuild: