@@ -40,16 +40,16 @@ DIST mysql-4.0.27.tar.gz 11152643 RMD160 00cf895eab192e3e0ab526587ccab3e81c6c907
 DIST mysql-4.1.21.tar.gz 17624947 RMD160 a8e92bb3b1371cde3fd938482b34cb597403debf SHA1 ec761b42d640e4dd051bff939fdcd2895b0e2591 SHA256 43a23ab44fdbd4893e1f5076a2f7fa1540afbaa617e772202099acd24af0e3c5
 DIST mysql-5.0.26.tar.gz 25986952 RMD160 98ee85457de4bc8c8f8acddc8b6f0dc7687f32c7 SHA1 7197159f9214722aa41b82ad80f87b4af5d232ce SHA256 4266fe6a3593700d4157b8cc4278fa8ae98837d4757735fc6ed70d9df6bb2680
 DIST mysql-5.0.30.tar.gz 26139291 RMD160 a26c3ecb4db22010c6dec66be15d73a274de73eb SHA1 b3d60f1233ea6fa2552fe860775b9b2d83b80670 SHA256 7d8deb0d829e1298b345900c58814750ee3d642653aab47ec65c8dfe07bca8a0
-DIST mysql-extras-20050920.tar.bz2 51007 RMD160 27e8eaaf09bf8a6cc1fbec2678d756bad102c1ea SHA1 3b73c69526ef85eb7be53b54c85bb20dc36650d3 SHA256 f75922eac6229593508c4adace441b53d7bc68e82282fc80f1174612418bb8fc
+DIST mysql-extras-20061210.tar.bz2 51115 RMD160 52355e608d5048c91b7960aa5be0c030ecb0e5d8 SHA1 c9d035ac73d29fe2d1274760ca70b8c6b882fec6 SHA256 46505a8b54ae7cafdc610465edfdfde1cd74f101071f71cf1f5c1c02e92790eb
 DIST mysql-patchset-4.0.25-r1.tar.bz2 4577 RMD160 83fbe57e3ae33c1041c3b4628481903087848c1f SHA1 b83148ba72644298f9eabb9e475b412dbd397429 SHA256 94f57350089dc59d30cdee522ee35a9bc9bfceb2ebe1bfa2e324b1e04024e0cf
 DIST mysql-patchset-4.0.27-r1.tar.bz2 4716 RMD160 362a1e2816c0606c47449c9e869a2a06459f3109 SHA1 0049ce4e08adc4fffc449a6286fb35512de5f460 SHA256 2cc1def725861a30c6146c63b68eb54356524d1b901eb7ae50742dcc93ea5e40
 DIST mysql-patchset-4.1.21-r1.tar.bz2 3851 RMD160 61ea4ef8d630f5e9fad1daa9e0d4204b2b6a94bf SHA1 6c0176beb3fcb6eb5633f8523d40a198e862dec9 SHA256 68a161055ae75a5668bea4534586261638f3471c30ee52cd6e2f0b4f6835751e
 DIST mysql-patchset-5.0.26-r3.tar.bz2 2483 RMD160 a74add4ef93ac5f3a05136d8ebf1dac8eb61190d SHA1 e501b69c27882e67c3097a987f30250f8e405a5c SHA256 c718472b0d7e7dcf49b5da9b004427f993a02d495a76a938c795eca46f820b3d
 DIST mysql-patchset-5.0.30-r1.tar.bz2 1735 RMD160 763904899069a4be1bb5983f20b6d3df7a17c10d SHA1 c965f94096ec44e2ee094001512e7380103f32b4 SHA256 d20fdcd22e8d0c90e11cd9bc74d0eee65eb756e759a9a77ae555ed28df195089
-EBUILD mysql-3.23.58-r1.ebuild 7232 RMD160 8dccb272ad58c1338c219aeb0327ad45522b05bf SHA1 738295742f30ed0fe8cdc1a7b33cf92f2a1e67bf SHA256 6d461c9d360a41d4c9c7dafbc5744a3222a00a417fe439da4aebee276c956b38
-MD5 0a98ffc228fea2a1a073880b2120dc68 mysql-3.23.58-r1.ebuild 7232
-RMD160 8dccb272ad58c1338c219aeb0327ad45522b05bf mysql-3.23.58-r1.ebuild 7232
-SHA256 6d461c9d360a41d4c9c7dafbc5744a3222a00a417fe439da4aebee276c956b38 mysql-3.23.58-r1.ebuild 7232
+EBUILD mysql-3.23.58-r1.ebuild 7371 RMD160 265aecaefced755d640fec5f20675b2cd3eb449e SHA1 8f7862e69d6f699e5b91149fad90259b1f054cf0 SHA256 63575f0b96d8415059155173de1a609ffda5624d6df744c8ea770f5915a56f1e
+MD5 4a54b06ba1ad933bd262e6e510de9fdf mysql-3.23.58-r1.ebuild 7371
+RMD160 265aecaefced755d640fec5f20675b2cd3eb449e mysql-3.23.58-r1.ebuild 7371
+SHA256 63575f0b96d8415059155173de1a609ffda5624d6df744c8ea770f5915a56f1e mysql-3.23.58-r1.ebuild 7371
 EBUILD mysql-4.0.25-r2.ebuild 1159 RMD160 f27590e93ba3bc22262f50e230a21dd91b0978ac SHA1 a75434b00b1c35f943a6c69a2daf0d8f9ae38e64 SHA256 b50e8672129b6062ededa6abf4e5b99c79bbb009196e119b07698b1e7b01521c
 MD5 858b4a26069b174f177905361b05992e mysql-4.0.25-r2.ebuild 1159
 RMD160 f27590e93ba3bc22262f50e230a21dd91b0978ac mysql-4.0.25-r2.ebuild 1159
@@ -66,21 +66,21 @@ EBUILD mysql-5.0.26-r1.ebuild 1169 RMD160 49e83285689b88071ced828522172bd71a45e6
 MD5 51556d2537260310becec01591568402 mysql-5.0.26-r1.ebuild 1169
 RMD160 49e83285689b88071ced828522172bd71a45e67d mysql-5.0.26-r1.ebuild 1169
 SHA256 aaa7c1d347fafd1c5634674c4a394cec349db7c5a81083217d37017c5b21994d mysql-5.0.26-r1.ebuild 1169
-EBUILD mysql-5.0.30.ebuild 1102 RMD160 dec7edbd70a63ebe34bbedde833435b2bbbf6182 SHA1 49e8824a5b56e454735d9ddae4412b390f5004aa SHA256 0cc01c44f57912bdcf4ca28c6ecf6f2e34293fd3faf848eb6bc464e6de3ec4a7
-MD5 50d9800d7a02bdee17b664f24e829993 mysql-5.0.30.ebuild 1102
-RMD160 dec7edbd70a63ebe34bbedde833435b2bbbf6182 mysql-5.0.30.ebuild 1102
-SHA256 0cc01c44f57912bdcf4ca28c6ecf6f2e34293fd3faf848eb6bc464e6de3ec4a7 mysql-5.0.30.ebuild 1102
-MISC ChangeLog 75032 RMD160 483edeb6809ddef11842d91640901851eeeb2d0e SHA1 0128185086d97828fbfd08696a5715591669b299 SHA256 8a5a29f0044f1c91c16450719136afb781ab195db3b107e589edbd54f21b0bc3
-MD5 b8c4eeb54215c4ea69673417894b13ac ChangeLog 75032
-RMD160 483edeb6809ddef11842d91640901851eeeb2d0e ChangeLog 75032
-SHA256 8a5a29f0044f1c91c16450719136afb781ab195db3b107e589edbd54f21b0bc3 ChangeLog 75032
+EBUILD mysql-5.0.30.ebuild 1103 RMD160 e17a443a9c65fc42b8effdee3782c486d5b3d541 SHA1 c487e646adf2e95c427e6ecacce79329f916385a SHA256 37f5a445bd09d65afcd62cee62ce6522ca88c6feb46050e4fd382d7ab837f4df
+MD5 a8d10ccd1e64dedb6880dac52e5067c7 mysql-5.0.30.ebuild 1103
+RMD160 e17a443a9c65fc42b8effdee3782c486d5b3d541 mysql-5.0.30.ebuild 1103
+SHA256 37f5a445bd09d65afcd62cee62ce6522ca88c6feb46050e4fd382d7ab837f4df mysql-5.0.30.ebuild 1103
+MISC ChangeLog 75323 RMD160 7cbf087a716caa8ac70195020d381f2b4d8704bc SHA1 8077f4fab4ffd97ef7535bb9a3c746b44bfea4bc SHA256 654ad1b2054dc41f5d0de0188dd97f34cd837daf0b3d5415d31be9189e9f751b
+MD5 d14bc1923e9402ef4fe7f45e194347aa ChangeLog 75323
+RMD160 7cbf087a716caa8ac70195020d381f2b4d8704bc ChangeLog 75323
+SHA256 654ad1b2054dc41f5d0de0188dd97f34cd837daf0b3d5415d31be9189e9f751b ChangeLog 75323
 MISC metadata.xml 159 RMD160 a50a94af7706288c46f81d6c3da9b5f888050eee SHA1 5eb253a678d6faa0f1c6b3c5720a804ed8923566 SHA256 5cfd5aa0e8104c0326b5f4c9205a6449a94e0f6f6abfd2626f1e7a8fe77b98b7
 MD5 f1c86d989c7ea2451931e7e2c3530f8c metadata.xml 159
 RMD160 a50a94af7706288c46f81d6c3da9b5f888050eee metadata.xml 159
 SHA256 5cfd5aa0e8104c0326b5f4c9205a6449a94e0f6f6abfd2626f1e7a8fe77b98b7 metadata.xml 159
-MD5 7a9b202499409304a68680f9d749ec8d files/digest-mysql-3.23.58-r1 512
-RMD160 5d30edca2748f16b2092021823c1377da2007194 files/digest-mysql-3.23.58-r1 512
-SHA256 348bceaedc24580dd89d90afb52164a26487574c59e855e2483468d5f1584eec files/digest-mysql-3.23.58-r1 512
+MD5 96dcf503837c8f58e55c365a70a17e72 files/digest-mysql-3.23.58-r1 512
+RMD160 697566dd555c41eff5b02d114992b7c7efb45c62 files/digest-mysql-3.23.58-r1 512
+SHA256 df65c65648e29af5cf3df09407521acb4a0160106247cb14d0f23b3ec3c5de74 files/digest-mysql-3.23.58-r1 512
 MD5 360770d3e18379b3c6518e4f03957dc9 files/digest-mysql-4.0.25-r2 515
 RMD160 1711fe7ff7cf110f0c35c3847829d65771140b40 files/digest-mysql-4.0.25-r2 515
 SHA256 e57188f0ae973c5a370400840c5622afa4b5cf2aebcc36ec678e58aab8a5b3ca files/digest-mysql-4.0.25-r2 515
