@@ -1,6 +1,6 @@
 MD5 835a96c86132fbde0db36db60c5b34cd mysql-3.23.58.tar.gz 12039843
 RMD160 b7d436ac7aaa9238e724bf3c62c5f837bef676b6 mysql-3.23.58.tar.gz 12039843
 SHA256 8dcc6a613820701221b787419c32c1c717562194cfd296187da0e87454252acc mysql-3.23.58.tar.gz 12039843
-MD5 5a936d382232f7b4b15fc7d025e9fa8e mysql-extras-20050920.tar.bz2 51007
-RMD160 27e8eaaf09bf8a6cc1fbec2678d756bad102c1ea mysql-extras-20050920.tar.bz2 51007
-SHA256 f75922eac6229593508c4adace441b53d7bc68e82282fc80f1174612418bb8fc mysql-extras-20050920.tar.bz2 51007
+MD5 579a4f68169ea5c43534a5cfea473b20 mysql-extras-20061210.tar.bz2 51115
+RMD160 52355e608d5048c91b7960aa5be0c030ecb0e5d8 mysql-extras-20061210.tar.bz2 51115
+SHA256 46505a8b54ae7cafdc610465edfdfde1cd74f101071f71cf1f5c1c02e92790eb mysql-extras-20061210.tar.bz2 51115
