@@ -1,6 +1,13 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.378 2006/12/04 21:28:18 plasmaroo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.379 2006/12/10 02:25:09 vivo Exp $
+
+  10 Dec 2006; Francesco Riosa <vivo@gentoo.org> mysql-3.23.58-r1.ebuild,
+  mysql-5.0.30.ebuild:
+  add LinuxThread patch for mysql-3 after more than one year of brokeness
+
+  09 Dec 2006; Francesco Riosa <vivo@gentoo.org> mysql-5.0.30.ebuild:
+  version bump, split of SRC_URIs outside the eclass
 
   04 Dec 2006; Tim Yamin <plasmaroo@gentoo.org> mysql-5.0.26-r1.ebuild:
   Stable on IA64; bug #144999.
